Fix overflow of tool icons in math editor for small screens

--- a/public/app/styles/ice/emoji.less
+++ b/public/app/styles/ice/emoji.less
@@ -214,6 +214,10 @@ li {
 
   #tools_left {
     z-index: 99;
+    display: flex;
+    flex-wrap: wrap;
+    height: auto;
+    justify-content: center;
   }
 
   #shape_buttons {
